--- a/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/Pages/Index.cshtml
@@ -11,11 +11,7 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     @for(var i = 0; i < rm.GetBranches().Count; i++)
-    {<p>Branch: @(rm.GetBranches()[i].FriendlyName)</p>}
-    @for (var i = 0; i < rm.getCommit().Count; i++)
-    {   
-        <p>Commit: @(rm.getCommit()[i].Id)</p>
-        <p>Message: @(rm.getMessages()[i])</p>
+    {
+        <a href="@(rm.GetBranches()[i].FriendlyName)">@(rm.GetBranches()[i].FriendlyName)</a>
     }
 </div>
-//wyswietl liste plikow w comicie liste branchy w repo i commitow w branchu juz w html
